--- a/resources/views/layouts/base.edge
+++ b/resources/views/layouts/base.edge
@@ -67,9 +67,9 @@
                 <div class="col-lg-12">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li class="active"><a href="./index.html">Home</a></li>
+                            <li class="active"><a href="{{ route('index') }}">Home</a></li>
                             <li><a href="./about.html">About</a></li>
-                            <li><a href="./shop.html">Shop</a></li>
+                            <li><a href="{{ route('shop') }}">Produtos</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./shop-details.html">Shop Details</a></li>
