Desenvolvido login e cadastro de usuarios

--- a/resources/views/layouts/base.edge
+++ b/resources/views/layouts/base.edge
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Cake, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cake | Template</title>
+    <title>Cake</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
@@ -44,11 +44,15 @@
                         <div class="header__top__inner">
                             <div class="header__top__left">
                                 <ul>
-                                    <li><a href="#">Sign in</a> <span class="arrow_carrot-down"></span></li>
+                                  @if(await auth.use('web').check())
+                                   <li><a href="{{ route("logout") }}">Sair</a> <span class="arrow_carrot-down"></span></li>
+                                  @else
+                                   <li><a href="{{ route("loginView") }}">Fazer Login</a> <span class="arrow_carrot-down"></span></li>
+                                  @endif
                                 </ul>
                             </div>
                             <div class="header__logo">
-                                <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                                <a href="{{ route('index') }}"><img src="img/logo.png" alt=""></a>
                             </div>
                             <div class="header__top__right">
                                 <div class="header__top__right__links">
@@ -70,15 +74,7 @@
                             <li class="active"><a href="{{ route('index') }}">Home</a></li>
                             <li><a href="./about.html">About</a></li>
                             <li><a href="{{ route('shop') }}">Produtos</a></li>
-                            <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="./shop-details.html">Shop Details</a></li>
-                                    <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                                    <li><a href="./checkout.html">Check Out</a></li>
-                                    <li><a href="./wisslist.html">Wisslist</a></li>
-                                    <li><a href="./Class.html">Class</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
-                                </ul>
+                            <li><a href="{{ route('profile') }}">Perfil</a>
                             </li>
                             <li><a href="./blog.html">Blog</a></li>
                             <li><a href="./contact.html">Contact</a></li>
