--- a/resources/views/login.edge
+++ b/resources/views/login.edge
@@ -8,11 +8,10 @@
               <div class="class__form">
                   <div class="section-title">
                       <span>Login</span>
-                      <h2>Prove o melhor <br />de todos os bolos</h2>
                   </div>
-                  <form action="#">
-                      <input type="email" placeholder="E-mail" name="email">
-                      <input type="password" placeholder="Senha">
+                  <form action="{{ route('login') }}" method="POST">
+                      <input type="email" placeholder="E-mail" name="email" required>
+                      <input type="password" placeholder="Senha" name="password" required>
                       <button type="submit" class="site-btn">Fazer login</button>
                   </form>
               </div>
