--- a/resources/views/shop.edge
+++ b/resources/views/shop.edge
@@ -7,19 +7,19 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="breadcrumb__text">
-                        <h2>Shop</h2>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                    <div class="breadcrumb__links">
-                        <a href="./index.html">Home</a>
-                        <span>Shop</span>
+                        <h2>Catalogo</h2>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Breadcrumb End -->
+
+    @if(auth.user && auth.user.role === 'seller')
+    <div class="container mt-5">
+      <a href="#" class="primary-btn btn">Cadastrar produto</a>
+    </div>
+    @endif
 
     <!-- Shop Section Begin -->
     <section class="shop spad">
