--- a/resources/views/layouts/base.edge
+++ b/resources/views/layouts/base.edge
@@ -74,10 +74,13 @@
                             <li class="active"><a href="{{ route('index') }}">Home</a></li>
                             <li><a href="./about.html">About</a></li>
                             <li><a href="{{ route('shop') }}">Produtos</a></li>
-                            <li><a href="{{ route('profile') }}">Perfil</a>
                             </li>
                             <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            @if(await auth.use('web').check() && auth.user.role == 'admin')
+                              <li><a href="{{ route('sellers') }}">Vendedores</a></li>
+                            @endif
+                            {{-- <li><a href="./contact.html">Contact</a><li> --}}
+                            <li><a href="{{ route('profile') }}">Perfil</a>
                         </ul>
                     </nav>
                 </div>
