--- a/resources/views/login.edge
+++ b/resources/views/login.edge
@@ -14,6 +14,8 @@
                       <input type="password" placeholder="Senha" name="password" required>
                       <button type="submit" class="site-btn">Fazer login</button>
                   </form>
+                  <br>
+                  Não tem uma conta? <a href="{{route('signupView')}}" style="color:#f08632;font-weight:bold">Fazer cadastro</a>
               </div>
           </div>
       </div>
