--- a/resources/views/checkout.edge
+++ b/resources/views/checkout.edge
@@ -38,12 +38,12 @@
                               <input type="text" value="{{auth.user.email}}" disabled>
                             </div>
                             <div class="checkout__input">
-                              <p>CEP<span></span></p>
-                              <input type="text">
+                              <p>CEP <span data-js="cep-message"></span></p>
+                              <input type="text" id="CEP" maxlength="8">
                             </div>
                             <div class="checkout__input">
                                 <p>Endereço<span>*</span></p>
-                                <input type="text" placeholder="Endereço completo" class="checkout__input__add" required name="address">
+                                <input type="text" placeholder="Endereço completo" class="checkout__input__add" required name="address" id="address">
                             </div>
                             <br>
                             <h6 class="checkout__title">Dados de pagamento</h6>
@@ -94,4 +94,6 @@
     </section>
     <!-- Checkout Section End -->
 
+    <!-- search CEP -->
+    <script src="js/searchCEP.js"></script>
 @endsection
